--- a/views/admin/button.hbs
+++ b/views/admin/button.hbs
@@ -70,6 +70,10 @@
             <i class="fas fa-pencil-alt"></i>
             <span class="button-text"><a href="/admin/discriptive">discriptive</a></span>
         </button>
+        <button class="button" >
+            <i class="fas fa-pencil-alt"></i>
+            <span class="button-text"><a href="/admin/stateviva">Statement viva</a></span>
+        </button>
     </div>
 
     <script>
